# cpp-playground

01-cmake-minimal/: CMakeLists.txt  README.md
01-cmake-minimal/src/: main.cpp
02-cmake-advanced/: CMakeLists.txt
02-cmake-advanced/lib/: CMakeLists.txt
02-cmake-advanced/lib/include/: cmake_library.hpp
02-cmake-advanced/lib/src/: cmake_library.cpp  cmake_library_priv.hpp
02-cmake-advanced/src/: main.cpp
03-std-variant/: CMakeLists.txt  README.md
03-std-variant/src/: main.cpp
04-std-optional/: CMakeLists.txt  README.md
04-std-optional/src/: main.cpp
05-std-unordered-set-std-unordered-map/: CMakeLists.txt  README.md
05-std-unordered-set-std-unordered-map/src/: main.cpp
06-structure-binding/: CMakeLists.txt  README.md
06-structure-binding/src/: main.cpp
07-multithreading/: CMakeLists.txt  README.md
07-multithreading/src/: main.cpp
08-cmake-presets/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
08-cmake-presets/src/: main.cpp
09-googletest-gtest-gmock/: CMakeLists.txt  README.md
09-googletest-gtest-gmock/src/: main-gmock.cpp  main.cpp
